Decrypt environment variables with kms

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,3 +15,9 @@ sqs {
     url = "set_me_queue_url"
     url = ${?QUEUE_URL}
 }
+function {
+  name = ${AWS_LAMBDA_FUNCTION_NAME}
+}
+kms {
+  endpoint = "https://kms.eu-west-2.amazonaws.com"
+}
