--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,13 +1,19 @@
 url {
-    api = "http://localhost:9001/graphql"
-    auth = "http://localhost:9002/auth"
+    api = "aHR0cDovL2xvY2FsaG9zdDo5MDAxL2dyYXBocWw=" # http://localhost:9001/graphql
+    auth = "aHR0cDovL2xvY2FsaG9zdDo5MDAyL2F1dGg=" # http://localhost:9002/auth
 }
 client {
-    id = "id"
-    secret = "secret"
+    id = "aWQ=" # id
+    secret = "c2VjcmV0" # secret
 }
 
 sqs {
-    url = "http://localhost:8001/1/testqueue"
+    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxLzEvdGVzdHF1ZXVl" # http://localhost:8001/1/testqueue
     endpoint = "http://localhost:8001"
+}
+function {
+  name = "test-lambda-function"
+}
+kms {
+  endpoint = "http://localhost:9003"
 }
