Code review changes£

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,6 @@
 url {
-    api = "aHR0cDovL2xvY2FsaG9zdDo5MDAxL2dyYXBocWw=" # http://localhost:9001/graphql
-    auth = "aHR0cDovL2xvY2FsaG9zdDo5MDAyL2F1dGg=" # http://localhost:9002/auth
+    api = "aHR0cDovL2xvY2FsaG9zdDo5MDAxL2dyYXBocWw=" # Base 64 decodes to this value http://localhost:9001/graphql
+    auth = "aHR0cDovL2xvY2FsaG9zdDo5MDAyL2F1dGg=" # Base 64 decodes to this value http://localhost:9002/auth
 }
 client {
     id = "aWQ=" # id
@@ -8,7 +8,7 @@ client {
 }
 
 sqs {
-    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxLzEvdGVzdHF1ZXVl" # http://localhost:8001/1/testqueue
+    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxLzEvdGVzdHF1ZXVl" # Base 64 decodes to this value http://localhost:8001/1/testqueue
     endpoint = "http://localhost:8001"
 }
 function {
