Initial switch to elasticmq library

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,7 +8,7 @@ client {
 }
 
 sqs {
-    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxLzEvdGVzdHF1ZXVl" # Base 64 decodes to this value http://localhost:8001/1/testqueue
+    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxL3F1ZXVlL3Rlc3RxdWV1ZQ==" # Base 64 decodes to this value http://localhost:8001/queue/testqueue
     endpoint = "http://localhost:8001"
 }
 function {
