Get the secret from the parameter store.
I've also added in a test that checks that systems manager is called.
I've tidied up some IntelliJ warnings and removed the .bsp directory.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,7 @@ client {
     id = ${?CLIENT_ID}
     secret = "secretplaceholder"
     secret = ${?CLIENT_SECRET}
+    secret_path = ${?CLIENT_SECRET_PATH}
 }
 sqs {
     endpoint = "https://sqs.eu-west-2.amazonaws.com"
@@ -20,4 +21,7 @@ function {
 }
 kms {
   endpoint = "https://kms.eu-west-2.amazonaws.com"
+}
+ssm {
+  endpoint = "https://ssm.eu-west-2.amazonaws.com"
 }
