--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -5,6 +5,7 @@ url {
 client {
     id = "aWQ=" # id
     secret = "c2VjcmV0" # secret
+    secret_path = "/a/secret/path"
 }
 
 sqs {
@@ -16,4 +17,7 @@ function {
 }
 kms {
   endpoint = "http://localhost:9003"
+}
+ssm {
+  endpoint = "http://localhost:9004"
 }
