Update api-update for the new backend checks
The incoming json is a bit overly complicated because of the way the
step functions structure things. There's not much I can do so I've added
in a custom decoder to deal with things.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,20 +7,8 @@ url {
 client {
     id = "tdr-backend-checks"
     id = ${?CLIENT_ID}
-    secret = "secretplaceholder"
-    secret = ${?CLIENT_SECRET}
+    secret_path = "/intg/keycloak/backend_checks_client/secret"
     secret_path = ${?CLIENT_SECRET_PATH}
-}
-sqs {
-    endpoint = "https://sqs.eu-west-2.amazonaws.com"
-    url = "set_me_queue_url"
-    url = ${?QUEUE_URL}
-}
-function {
-  name = ${AWS_LAMBDA_FUNCTION_NAME}
-}
-kms {
-  endpoint = "https://kms.eu-west-2.amazonaws.com"
 }
 ssm {
   endpoint = "https://ssm.eu-west-2.amazonaws.com"
