--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,23 +1,12 @@
 url {
-    api = "aHR0cDovL2xvY2FsaG9zdDo5MDAxL2dyYXBocWw=" # Base 64 decodes to this value http://localhost:9001/graphql
-    auth = "aHR0cDovL2xvY2FsaG9zdDo5MDAyL2F1dGg=" # Base 64 decodes to this value http://localhost:9002/auth
+    api = "http://localhost:9001/graphql"
+    auth = "http://localhost:9002/auth"
 }
 client {
-    id = "aWQ=" # id
-    secret = "c2VjcmV0" # secret
+    id = "id"
     secret_path = "/a/secret/path"
 }
 
-sqs {
-    url = "aHR0cDovL2xvY2FsaG9zdDo4MDAxL3F1ZXVlL3Rlc3RxdWV1ZQ==" # Base 64 decodes to this value http://localhost:8001/queue/testqueue
-    endpoint = "http://localhost:8001"
-}
-function {
-  name = "test-lambda-function"
-}
-kms {
-  endpoint = "http://localhost:9003"
-}
 ssm {
   endpoint = "http://localhost:9004"
 }
