Code review changes.
* Remove reference to queues and KMS in the README.
* Delete the Jenkinsfiles
* Change the deploy job to deploy to a V2 lambda.
* Remove the integration ssm parameter name from the conf file.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,7 @@ url {
 client {
     id = "tdr-backend-checks"
     id = ${?CLIENT_ID}
-    secret_path = "/intg/keycloak/backend_checks_client/secret"
+    secret_path = "secretplaceholder"
     secret_path = ${?CLIENT_SECRET_PATH}
 }
 ssm {
