--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
   test:
     uses: nationalarchives/tdr-github-actions/.github/workflows/tdr_test.yml@23171128721c6f4e951b8c6868a57a787e44db82 # v.0.0.8
     with:
+      java-version: '17'
       repo-name: tdr-api-update
       test-command: |
         sbt test
