revert mergify.yml changes

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,10 +1,6 @@
 queue_rules:
   - name: default
-    batch_size: 1
-    queue_conditions:
-      - "check-success=test / test"
-      - "check-success=security/snyk (nationalarchives)"
-    merge_conditions:
+    conditions:
       - "check-success=test / test"
       - "check-success=security/snyk (nationalarchives)"
 pull_request_rules:
